Updated case study

--- a/portfolio-pages/borrowell-credit-builder-marketing-assets.html
+++ b/portfolio-pages/borrowell-credit-builder-marketing-assets.html
@@ -142,7 +142,7 @@
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-9">
                                 <h2>Landing page</h2>
-                                <h3>The problem</h3>
+                                <h3>The problem statement</h3>
                                 <p>The biggest challenge with the paid ads campaigns is the fact that 90% of the users who clicked through and landed on the <a href="https://borrowell.com/credit-builder" target="_blank">Credit Builder page</a>  on the marketing site navigated away from it. This is seen by the fact that 64 new free credit score sign ups were attributed to the new campaigns.</p>
                             </div>
                             <div class="col-xs-12 col-md-3">
@@ -175,53 +175,70 @@
                     </div>
 
                     <div class="section">
-                        <h4>Shipping quickly</h4>
-                        <p>The marketing team wanted to ship quickly, so we used the existing template that we used for our free credit score landing pages and just swapped out the contents.
-                        </p>
-
-                        <p class="image-caption">Image of page we shipped with.</p>
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-6 col-lg-4">
+                                <h4>Shipping quickly</h4>
+                                <p>In order to ship quickly, the stakeholders decided to use our pre-existing template. We used the template from the free credit score landing page and updated the contents with the necessary information. </p>        
+                            </div>
+                            <div class="col-xs-12 col-md-6 col-lg-8">
+                                <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-landing-page.png" alt="Credit Builder landing page">
+                                <p class="image-caption">The Credit Builder landing page that we first shipped with.</p>    
+                            </div>
+                        </div>
                     </div>
 
                     <div class="section">
                         <h4>Iterating to the desired state</h4>
-                        <p>The design of the existing landing page template used outdated branding that we’d begun to shift away from. It still had saturated purple backgrounds and moved towards using lighter ones, so that graphics would be the thing to stand out on the page, not the backgrounds.
-                        </p>
+                        <p>The design of the template featured outdated branding that we had already started to phase out. To achieve the desired state of light backgrounds, I designed landing pages in a progressive manner. Initially, I updated the page content to align more closely with the Credit Builder product, incorporating testimonials specific to the product, rather than solely from the Borrowell app. Next, I created a version of the landing page with lighter backgrounds, which aligned with our branding shift, and allowed the graphics to stand out more prominently.</p>
+                    </div>
 
-                        <p class="image-caption">Image of iterations to get to desired design state.</p>
+                    <div class="section">
+                        <img class="img-fluid" src="../img/credit-builder-marketing-assets/credit-builder-landing-page-progression.png" alt="Credit Builder landing page progression from saturated to lighter backgrounds">
+                        <p class="image-caption">Iteration with updated content, but saturated backgrounds (left). Iteration with the desired state of lighter backgrounds (right).</p>
                     </div>
 
                    <div class="section">
-                        <h4>A/B testing plan</h4>
-                        <ul class="bullets">
-                            <li>
-                                <p>h1 copy</p>
-                            </li>
-                            <li>
-                                <p>Hero image based on ad persona</p>
-                            </li>
-                            <li>
-                                <p>Pricing cards vs pricing table vs not showing pricing options</p>
-                            </li>
-                            <li>
-                                <p>CTA button colours</p>
-                            </li>
-                        </ul>
-
-                        <p class="image-caption">A/B testing plan iterations.</p>
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-6">
+                                <h4>A/B testing plan</h4>
+                                <p>The initial A/B test was to experiment with the versions of the design mentioned above from saturated to lighter backgrounds. The marketing team and I brainstormed a list of ideas of things to test. Some of these include:</p>
+                                <ul class="bullets">
+                                    <li>
+                                        <p>h1 copy</p>
+                                    </li>
+                                    <li>
+                                        <p>Hero image based on ad persona</p>
+                                    </li>
+                                    <li>
+                                        <p>Pricing cards vs pricing table vs not showing pricing options</p>
+                                    </li>
+                                    <li>
+                                        <p>CTA button colours</p>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <img class="img-fluid" src="../img/credit-builder-marketing-assets/landing-page-a-b-testing.png" alt="Credit Builder landing page A/B test iterations">
+                                <p class="image-caption">A/B testing plan iterations: CTA button colours (top), hero image based on persona and to match with the ads (bottom).</p>            
+                            </div>
+                        </div>
                    </div>
 
                    <div class="section">
-                        <h4>Challenges</h4>
-                        <p>The main challenge was figuring how out to get to the desired state of the web design with updated branding. We decided to take an approach switching out the overall look and feel, but keeping the content and layout generally the same. Then we could iterate further from there, assuming this didn’t decrease the acquisition rate.</p>
-                   </div>
-
-                   <div class="section">
-                        <h4>Approach</h4>
-                        <ul class="bullets">
-                            <li><p>Use animation to help communicate more information in less time.</p></li>
-                            <li><p>Rely more on the accompanying text and use the graphic to capture attention.</p></li>
-                            <li><p>Simplify the explanation text as much as possible.</p></li>
-                        </ul>
+                        <div class="row align-center">
+                            <div class="col-xs-12 col-md-6">
+                                <h4>Challenges</h4>
+                                <p>The main challenge was figuring how out to get to the desired state of the web design with updated branding. We decided to take an approach switching out the overall look and feel, but keeping the content and layout generally the same. Then we could iterate further from there, assuming this didn’t decrease the acquisition rate.</p>        
+                            </div>
+                            <div class="col-xs-12 col-md-6">
+                                <h4>Approach</h4>
+                                <ul class="bullets">
+                                    <li><p>Use animation to help communicate more information in less time.</p></li>
+                                    <li><p>Rely more on the accompanying text and use the graphic to capture attention.</p></li>
+                                    <li><p>Simplify the explanation text as much as possible.</p></li>
+                                </ul>                            
+                            </div>
+                        </div>
                    </div>
 
                     <div class="section">
@@ -230,18 +247,20 @@
                     </div>
 
                     <div class="section">
-                        <h3>Accomplishments</h3>
-                        <ul class="bullets">
-                            <li>
-                                <p>Launched dedicated landing page quickly</p>
-                            </li>
-                            <li>
-                                <p>Created a test plan to get to ideal design state</p>
-                            </li>
-                            <li>
-                                <p>Developed an A/B test plan to continue learning</p>
-                            </li>
-                        </ul>
+                        <div class="highlighted-section blue">
+                            <h3>Accomplishments</h3>
+                            <ul class="bullets">
+                                <li>
+                                    <p>Launched dedicated landing page quickly</p>
+                                </li>
+                                <li>
+                                    <p>Created a test plan to get to ideal design state</p>
+                                </li>
+                                <li>
+                                    <p>Developed an A/B test plan to continue learning</p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
             
                     <div class="section">
@@ -249,12 +268,10 @@
                             <h2>Lessons learned</h2>
                             <ul class="bullets">
                                 <li>
-                                    <p>Creating a net new landing page with an A/B testing plan was a new type of project for me. It can take a bit longer to figure out newer projects. Establishing a process from this for future projects that are similar should help speed up the process. 
-                                    </p>
+                                    <p>Creating a net new landing page with an A/B testing plan was a new and challenging project for me. Establishing a process from this experience for similar projects in the future will help to expedite the process. </p>
                                 </li>
                                 <li>
-                                    <p>Strategically think about what might be the best way to communicate something instead of just executing on the item that is asked. Sometimes it’s easier to explain something more effectively with animation instead of static illustration and text.
-                                    </p>
+                                    <p>Approaching communication strategically involves considering the most effective means to convey a message or provide the best experience for the user. It's important to prioritize these factors over merely fulfilling stakeholder requests. In certain cases, using animation may be more effective than static illustrations and text in explaining a concept more comprehensively.</p>
                                 </li>
                             </ul>
                         </div>
