--- a/portfolio-pages/borrowell-credit-builder-marketing-assets.html
+++ b/portfolio-pages/borrowell-credit-builder-marketing-assets.html
@@ -98,6 +98,7 @@
                     </p>
                     <p><span class="bold">My role involved:</span>
                         <br>
+                        <span class="tag">Visual design</span>
                         <span class="tag">Web design</span>
                         <span class="tag">A/B testing plan</span>
                         <span class="tag">Creative direction</span>
