Updates, added new page

--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
             <div class="col-xs-12">
                 <h1>Let's tell your brand story</h1>
                 <p>Hi, I'm Amanda Wondergem a visual designer, outdoor adventurer and dog lover who helps brands tell their stories.</p>
-                <p>Here are some case studies and projects that demonstrate my work and how I think through design problems.</p>
             </div>
         </div>
         <br>
         <div class="row">
             <div class="col-xs-12">
+                <h2>Portfolio</h2>
+                <p>Here are a selection of case studies and projects showcasing my design work and approach to problem-solving.</p>
                 <ul class="portfolio-items-list">
                     <li class="portfolio-item">
                         <a class="" href="portfolio-pages/borrowell-branding.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-branding@2x.png" alt="Borrowell logo"></a>
@@ -130,11 +131,11 @@
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/borrowell-app-promo-video.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-app-promo-video.png" alt="Borrowell credit score"></a>
+                        <a class="" href="portfolio-pages/borrowell-app-store-listing.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-app-promo-video.png" alt="Borrowell credit score"></a>
                         <h2>App Store listing</h2>
                         <p>Case study from organic listing to SEO testing for Borrowell</p>
                         <div class="button">
-                            <a class="primary-button" href="portfolio-pages/borrowell-app-promo-video.html">View case study</a>
+                            <a class="primary-button" href="portfolio-pages/borrowell-app-store-listing.html">View project</a>
                         </div>
                     </li>
                     <li class="portfolio-item">
