--- a/portfolio-pages/demo-reel.html
+++ b/portfolio-pages/demo-reel.html
@@ -102,7 +102,7 @@
            </div>
            <div class="row">
             <div class="col-xs-12 col-lg-8 offset-lg-2">
-               <h1>Demo Reel</h1>
+               <h1>Demo reel</h1>
                <p>A collection of some of my best work from client and personal projects, as well as collaborations with my illustrator friends.</p>
                <hr>
                <h2>Credits</h2>
