--- a/tidbits.html
+++ b/tidbits.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="class col-xs-12">
                     <h1>Tidbits</h1>
-                    <p>Here are some client and personal pieces, some of which I collaborate with others on.</p>
+                    <p>These are a few of my client and personal projects, some of which were collaborative efforts.</p>
                 </div>
             </div>
             <br><br>
@@ -118,20 +118,20 @@
 
     <div data-load="footer.html"></div>
 
-    <!--FOOTER-->
-    <div class="container-fluid footer">
+     <!--FOOTER-->
+     <div class="container-fluid footer">
         <div class="row">
             <div class="col-xs-12">
                 <ul class="nav">
-                    <li><a href="index.html">Portfolio</a></li>
-                    <li><a href="tidbits.html">Tidbits</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index.html">Portfolio</a></li>
+                    <li><a href="../tidbits.html">Tidbits</a></li>
+                    <li><a href="../about.html">About</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
                 <ul class="social-media">
-                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="img/linkedin-black@2x.png" alt="linkedin" width="28" height="28"></a></li>
-                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="img/instagram-black@2x.png" alt="instagram" width="28" height="28"></a></li>
-                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="img/vimeo-black@2x.png" alt="vimeo" width="28" height="28"></a></li>
+                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-black@2x.png" alt="linkedin" width="28" height="28"></a></li>
+                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-black@2x.png" alt="instagram" width="28" height="28"></a></li>
+                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-black@2x.png" alt="vimeo" width="28" height="28"></a></li>
                 </ul>
                 <p class="copyright">&copy;&nbsp;2023 Amanda Wondergem</p>
             </div>
