--- a/portfolio-pages/borrowell-app-promo-video.html
+++ b/portfolio-pages/borrowell-app-promo-video.html
@@ -100,7 +100,7 @@
            <div class="row">
              <div class="col-xs-12 col-lg-8 offset-lg-2">
                 <div class="section-title">
-                    <h2>Borrowell App Promo Video</h2>
+                    <h2>Borrowell app promo video</h2>
                 </div>
                 <p>Borrowell is a customer facing platform that provides free credit scores and bill tracking, credit education and financial product recommendations. This animation helps promote their app, while highlighting the many features. I had the pleasure of working on the storyboard and animation for this piece twice. Many updates to the UI and app features have been added (current video above) since the app first launched in 2019 (below).</p>
                 <p><span class="bold">Client:</span> Borrowell
