--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -119,7 +119,7 @@
                     <p><span class="bold">My role involved:</span>
                         <br>
                         <span class="tag">Brand & identity design</span>
-                        <span class="tag">Graphic design</span>
+                        <span class="tag">Visual design</span>
                         <span class="tag">Illustration</span>
                         <span class="tag">Animation</span>
                         <span class="tag">Web design</span>
@@ -132,7 +132,7 @@
                     <hr>
 
                    <div class="section">
-                        <h2>Branding 2018-2023</h2>
+                        <h2>Branding <span style="white-space:nowrap">2018-2023</span></h2>
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6">
                                 <h3>Getting started</h3>
