--- a/portfolio-pages/wsps-safety-group.html
+++ b/portfolio-pages/wsps-safety-group.html
@@ -89,7 +89,7 @@
    <div class="page-wrapper portfolio-item-details">
        <div class="container">
            <div class="row">
-               <div class="col-xs-1 col-lg-8 offset-lg-2">
+               <div class="col-xs-12 col-lg-8 offset-lg-2">
                    <div class="video-container">
                         <div class="video-wrapper">
                             <div class="inner-video-wrapper">
@@ -103,7 +103,7 @@
            <div class="row">
             <div class="col-xs-12 col-lg-8 offset-lg-2">
                <div class="section-title">
-                   <h2>Safety Group Promo Video</h2>
+                   <h2>Safety Group promo video</h2>
                </div>
                <p>I had the pleasure to work on this explainer video that promotes Safety Groups to improve workplace health and safety.</p>
                 <p class="bold">2018 AVA Digital Awards - Platinum Winner</p>
