--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                             <h1>Hi, I'm Amanda Wondergem!</h1>
                             <p>I’m a visual designer based in Vancouver with 8+ years of experience simplifying complex content. At Borrowell, I drove the acquisition of 1.7M+ members with static and animated graphics and increased revenue by 16% with an explainer video. I also built design libraries and optimized brand impact.
                             </p> 
-                            <p>Aside from design, I have a passion for storytelling which led me to write and illustrate stories as a child, and more recently, create paintings. I launched a successful side business using my brand, design, and marketing skills. I'm eager to expand my expertise to new industries and help tell your brand's story next.
+                            <p>Aside from design, I have a passion for storytelling which led me to write and illustrate stories as a child and more recently, create paintings. I launched a successful side business using my brand, design, and marketing skills. I'm eager to expand my expertise to new industries and help tell your brand's story next.
                             </p> 
                         </div>
                     </div>
