--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
                         </div>
                     </li>
                     <li class="portfolio-item">
+                        <a class="" href="portfolio-pages/borrowell-app-store-listing.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-app-store-listing.png" alt="Borrowell credit dial, graph and credit factors"></a>
+                        <h2>App Store listing</h2>
+                        <p>Case study from organic listing to SEO testing for Borrowell</p>
+                        <div class="button">
+                            <a class="primary-button" href="portfolio-pages/borrowell-app-store-listing.html">View case study</a>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
                         <a class="" href="portfolio-pages/demo-reel.html"><img class="img-fluid" src="img/portfolio-thumbnails/demo-reel@2x.png" alt="Demo reel"></a>
                         <h2>Demo reel</h2>
                         <p>Snippets of motion graphics design work</p>
                         <div class="button">
                             <a class="primary-button" href="portfolio-pages/demo-reel.html">View project</a>
-                        </div>
-                    </li>
-                    <li class="portfolio-item">
-                        <a class="" href="portfolio-pages/borrowell-app-store-listing.html"><img class="img-fluid" src="img/portfolio-thumbnails/borrowell-app-promo-video.png" alt="Borrowell credit score"></a>
-                        <h2>App Store listing</h2>
-                        <p>Case study from organic listing to SEO testing for Borrowell</p>
-                        <div class="button">
-                            <a class="primary-button" href="portfolio-pages/borrowell-app-store-listing.html">View project</a>
                         </div>
                     </li>
                     <li class="portfolio-item">
