--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -96,7 +96,7 @@
                     <div class="section">
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6 col-lg-7 col-xl-8">
-                                <h2>Client Background</h2>
+                                <h2>Client background</h2>
                                 <p>Borrowell is a customer facing platform that provides free credit scores, credit education, credit building products and financial product recommendations. They were the first company to provide free credit scores in Canada. Their mission is to make financial prosperity possible for everyone. Through their web platform and mobile app they help people feel in control and optimistic about their financial future.</p>            
                             </div>
                             <div class="col-xs-12 col-md-6 col-lg-5 col-xl-4">
@@ -296,7 +296,7 @@
 
                     <div class="section">
                         <div class="highlighted-section blue">
-                            <h4>How success was measured</h4>
+                            <h2>How success was measured</h2>
                             <p>Using graphics and animations to simplify financial concepts, I helped facilitate the growth of acquisition from approximately 700k to over 2.5 million members in the span of five years.</p>
                         </div>
                     </div>
