--- a/portfolio-pages/borrowell-credit-builder-explainer-video.html
+++ b/portfolio-pages/borrowell-credit-builder-explainer-video.html
@@ -93,7 +93,7 @@
                     <h1>Borrowell Credit Builder explainer video</h1>
                     <p>Borrowell Credit Builder launched in May 2022.</p>
 
-                    <h2>Client Background</h2>
+                    <h2>Client background</h2>
                     <p>Borrowell is a customer facing platform that provides free credit scores, credit education, credit building products and financial product recommendations. They were the first company to provide free credit scores in Canada. Their mission is to make financial prosperity possible for everyone. Through their web platform and mobile app they help people feel in control and optimistic about their financial future.
                     </p>
                     <p><span class="bold">My role involved:</span>
@@ -278,7 +278,7 @@
                     <div class="section">
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6 12 col-xl-8">
-                                <h3>How success was measured</h3>
+                                <h2>How success was measured</h2>
                                 <p>The PM hypothesized that an explainer video on the app's education screen would increase the adoption rate of Credit Builder by 5%. However, the actual adoption rate saw a significant increase of 16%, resulting in a corresponding growth in revenue.
                                 </p>
                             </div>
