--- a/portfolio-pages/borrowell-credit-builder-marketing-assets.html
+++ b/portfolio-pages/borrowell-credit-builder-marketing-assets.html
@@ -93,7 +93,7 @@
                 <div class="col-xs-12 col-xl-8 offset-xl-2">
                     <h1>Borrowell Credit Builder marketing assets</h1>
 
-                    <h2>Client Background</h2>
+                    <h2>Client background</h2>
                     <p>Borrowell is a customer facing platform that provides free credit scores, credit education, credit building products and financial product recommendations. They were the first company to provide free credit scores in Canada. Their mission is to make financial prosperity possible for everyone. Through their web platform and mobile app they help people feel in control and optimistic about their financial future.
                     </p>
                     <p><span class="bold">My role involved:</span>
@@ -115,7 +115,7 @@
                     <div class="section">
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6 col-lg-4">
-                                <h3>The ask</h3>
+                                <h3>Context</h3>
                                 <p>Previously users had to sign up for a free credit score account with Borrowell, then navigate to and sign up for Credit Builder in the app. This created a lot of friction and made it harder to achieve successful acquisitions. Once a separate sign up funnel was developed for the Credit Builder product, I was tasked with creating ads and a landing page.</p>
                             </div>
                             <div class="col-xs-12 col-md-6 col-lg-8">
