Updates based on Oz's feedback

--- a/portfolio-pages/borrowell-branding.html
+++ b/portfolio-pages/borrowell-branding.html
@@ -256,12 +256,6 @@
                         </div>
                     </div>
 
-
-                        <!-- <p>With the introduction of two new products in 2022, there was an opportunity to evaluate how colour could relate to each one. These financial products aren’t tangible items so we decided to use colour to help the separation. I chose a main colour for each and then worked in secondary colours that contrast well against these.</p> -->
-                        
-                        <!-- <img class="img-fluid" src="../img/borrowell-branding/characters-2019@2x.png" alt="Character ilustrations, including larger limbs and purple skin tones."> -->
-                        <!-- <p class="image-caption">Image representing product line colours with labels.</p> -->
-
                         <div class="section">
                             <p>I switched ad templates from Canva to Figma in 2023, as auto layouts in Figma allowed for responsive templates that adjust to frame size changes. I also created reusable components for easy swapping of images, enabling quick and easy testing of multiple ad variations.</p>
 
@@ -279,9 +273,6 @@
                                 <p>Make the shift from saturated background to lighter ones across all channels for a cohesive brand experience.
                                 </p>
                             </li>
-                            <!-- <li>
-                                <p>Implement a sans serif typeface that’s easier to read on all platforms.</p>
-                            </li> -->
                             <li>
                                 <p>Evolve the overall messaging of Borrowell from focusing solely on “free credit score” to “building credit and achieving financial goals” so it’s more encompassing of the new credit building products that were launched in 2022.
                                 </p>
@@ -341,9 +332,9 @@
                     <li><a href="../contact.html">Contact</a></li>
                 </ul>
                 <ul class="social-media">
-                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-black@2x.png" alt="linkedin" width="28" height="28"></a></li>
-                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-black@2x.png" alt="instagram" width="28" height="28"></a></li>
-                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-black@2x.png" alt="vimeo" width="28" height="28"></a></li>
+                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-white@2x.png" alt="linkedin" width="28" height="28"></a></li>
+                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-white@2x.png" alt="instagram" width="28" height="28"></a></li>
+                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-white@2x.png" alt="vimeo" width="28" height="28"></a></li>
                 </ul>
                 <p class="copyright">&copy;&nbsp;2023 Amanda Wondergem</p>
             </div>
