--- a/portfolio-pages/demo-reel.html
+++ b/portfolio-pages/demo-reel.html
@@ -138,9 +138,9 @@
                     <li><a href="../contact.html">Contact</a></li>
                 </ul>
                 <ul class="social-media">
-                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-black@2x.png" alt="linkedin" width="28" height="28"></a></li>
-                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-black@2x.png" alt="instagram" width="28" height="28"></a></li>
-                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-black@2x.png" alt="vimeo" width="28" height="28"></a></li>
+                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-white@2x.png" alt="linkedin" width="28" height="28"></a></li>
+                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-white@2x.png" alt="instagram" width="28" height="28"></a></li>
+                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-white@2x.png" alt="vimeo" width="28" height="28"></a></li>
                 </ul>
                 <p class="copyright">&copy;&nbsp;2023 Amanda Wondergem</p>
             </div>
