--- a/tidbits.html
+++ b/tidbits.html
@@ -103,6 +103,7 @@
                         <img src="img/tidbits/besties.gif" alt="Animation of two sockies high fiving">
                         <img src="img/tidbits/borrowell-characters.png" alt="Illustration of four characters">
                         <img src="img/tidbits/D.png" alt="Illustrations within the letter D">
+                        <img src="img/tidbits/borrowell-mug-animation.gif" alt="Animation of a mug with hot chocolate and marshmallows">
                         <img src="img/tidbits/water-scene.gif" alt="Animation inspired by water">
                         <img src="img/tidbits/J.png" alt="Illustrations around the letter J">
                         <img src="img/tidbits/borrowell-rent-advantage-02.png" alt="Illustration a phone in front of buildings">
@@ -129,9 +130,9 @@
                     <li><a href="../contact.html">Contact</a></li>
                 </ul>
                 <ul class="social-media">
-                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-black@2x.png" alt="linkedin" width="28" height="28"></a></li>
-                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-black@2x.png" alt="instagram" width="28" height="28"></a></li>
-                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-black@2x.png" alt="vimeo" width="28" height="28"></a></li>
+                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="img/linkedin-white@2x.png" alt="linkedin" width="28" height="28"></a></li>
+                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="img/instagram-white@2x.png" alt="instagram" width="28" height="28"></a></li>
+                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="img/vimeo-white@2x.png" alt="vimeo" width="28" height="28"></a></li>
                 </ul>
                 <p class="copyright">&copy;&nbsp;2023 Amanda Wondergem</p>
             </div>
