--- a/portfolio-pages/borrowell-app-store-listing.html
+++ b/portfolio-pages/borrowell-app-store-listing.html
@@ -133,7 +133,7 @@
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6">
                                 <div class="video-center">
-                                    <video width="50%" height="auto" controls>
+                                    <video poster="../img/borrowell-app-store-listing/video-poster-2019.png" width="50%" height="auto" controls muted>
                                         <source src="../videos/borrowell-app-store-video-2019.mp4" type=video/mp4>
                                     </video>
                                     <p class="image-caption">App listing video from 2019.</p>
@@ -156,7 +156,7 @@
                         <div class="row align-center">
                             <div class="col-xs-12 col-md-6">
                                 <div class="video-center">
-                                    <video width="50%" height="auto" controls>
+                                    <video poster="../img/borrowell-app-store-listing/video-poster-2021.png" width="50%" height="auto" controls muted>
                                         <source src="../videos/borrowell-app-play-store-video-2021.mp4" type=video/mp4>
                                     </video>
                                     <p class="image-caption">App listing video from 2021.</p>
@@ -240,9 +240,9 @@
                     <li><a href="../contact.html">Contact</a></li>
                 </ul>
                 <ul class="social-media">
-                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-black@2x.png" alt="linkedin" width="28" height="28"></a></li>
-                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-black@2x.png" alt="instagram" width="28" height="28"></a></li>
-                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-black@2x.png" alt="vimeo" width="28" height="28"></a></li>
+                    <li><a href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><img src="../img/linkedin-white@2x.png" alt="linkedin" width="28" height="28"></a></li>
+                    <li><a  href="https://www.instagram.com/amanda_wondergem/" target="_blank" title="Instagram"><img src="../img/instagram-white@2x.png" alt="instagram" width="28" height="28"></a></li>
+                    <li><a href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><img src="../img/vimeo-white@2x.png" alt="vimeo" width="28" height="28"></a></li>
                 </ul>
                 <p class="copyright">&copy;&nbsp;2023 Amanda Wondergem</p>
             </div>
